--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '2.1'
 volumes:
   pihole_config:
   dnsmasq_config:
-  dnscrypt_config:
 
 services:
   pihole:
@@ -17,10 +16,8 @@ services:
       - '1.1.1.1'
     network_mode: host
 
-  # set pihole DNS1 and DNS2 service variables to 127.0.0.1#5053 to use dnscrypt-proxy for upstream DNS
-  dnscrypt-proxy:
-    build: ./dnscrypt-proxy
-    volumes:
-      - 'dnscrypt_config:/config'
+  # set pihole DNS1 and DNS2 service variables to 127.0.0.1#5053 to use unbound for upstream DNS
+  unbound:
+    build: ./unbound
     ports:
       - '5053:5053/udp'
