--- a/pihole/Dockerfile.rpi
+++ b/pihole/Dockerfile.rpi
@@ -1,4 +1,4 @@
-FROM balenalib/raspberrypi3-debian:jessie-build AS build
+FROM balenalib/rpi-debian:jessie-build AS build
 
 WORKDIR /usr/src
 
@@ -11,7 +11,7 @@ WORKDIR /usr/src/build
 
 RUN cmake .. && make
 
-FROM pihole/pihole:v4.4-armhf
+FROM pihole/pihole:v4.4-armel
 
 WORKDIR /usr/src
 
@@ -28,5 +28,5 @@ RUN sed -i '/$AUTHORIZED_HOSTNAMES = array(/ a "balena-devices.com",' /var/www/h
 RUN echo "bind-interfaces" >> /etc/dnsmasq.conf
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-RUN curl -fsSL https://github.com/jpmck/PADD/archive/v3.0.2.tar.gz | tar xz --strip-components 1 \
+RUN curl -fsSL https://github.com/jpmck/PADD/archive/v3.1.tar.gz | tar xz --strip-components 1 \
 	&& chmod +x padd.sh
