reduce verbosity but add a 10 minute interval statistic message

--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -15,6 +15,8 @@ server:
 
 	logfile: ""
 
-	verbosity: 2
+	verbosity: 1
+
+	statistics-interval: 600
 	
 	include: /opt/unbound/etc/unbound/a-records.conf
