--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -18,5 +18,7 @@ server:
 	verbosity: 1
 
 	statistics-interval: 600
+
+	statistics-cumulative: yes
 	
 	include: /opt/unbound/etc/unbound/a-records.conf
