--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
   pihole_config:
   dnsmasq_config:
   duplicati:
+  wireguard:
 
 services:
   # https://hub.docker.com/r/pihole/pihole
@@ -24,6 +25,19 @@ services:
     ports:
       - "5053:5053/udp"
 
+  # https://hub.docker.com/r/linuxserver/wireguard/
+  wireguard:
+    build: wireguard
+    privileged: true
+    environment: 
+      SERVERPORT: "51820"
+    ports:
+      - 51820:51820/udp
+    volumes:
+      - wireguard:/config
+    labels:
+      io.balena.features.kernel-modules: "1"
+  
   # https://hub.docker.com/r/linuxserver/duplicati
   duplicati:
     image: linuxserver/duplicati:arm32v7-latest
@@ -35,5 +49,6 @@ services:
       - 8200:8200/tcp
     volumes:
       - duplicati:/config
-      - pihole_config:/source/pihole:ro
-      - dnsmasq_config:/source/dnsmasq:ro
+      - pihole_config:/source/pihole
+      - dnsmasq_config:/source/dnsmasq
+      - wireguard:/source/wireguard
