fix plymouth blocking fpcp and update PADD to 3.4 with automatic font configuration https://github.com/klutchell/balena-pihole/issues/25 https://github.com/klutchell/balena-pihole/pull/28

--- a/wireguard/Dockerfile
+++ b/wireguard/Dockerfile
@@ -1,8 +1,6 @@
 
-FROM linuxserver/wireguard:arm32v7-v1.0.20200827-ls29
+FROM linuxserver/wireguard:arm32v7-v1.0.20200827-ls37
 
-COPY insmod.sh /
+COPY insmod.sh /config/custom-cont-init.d/insmod
 
-RUN chmod +x /insmod.sh
-
-ENTRYPOINT [ "/bin/bash", "-c", "/insmod.sh && /init" ]
+RUN chmod +x /config/custom-cont-init.d/insmod
