--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,14 @@ services:
     dns:
       - "127.0.0.1"
       - "1.1.1.1"
+    environment:
+      DNSMASQ_LISTENING: eth0
+      INTERFACE: eth0
+      DNS1: 127.0.0.1#5053
+      DNS2: 127.0.0.1#5053
     network_mode: host
+    labels:
+      io.balena.features.dbus: '1'
 
   # https://hub.docker.com/r/klutchell/unbound/
   unbound:
