fix wireguard init script

--- a/wireguard/Dockerfile
+++ b/wireguard/Dockerfile
@@ -1,6 +1,6 @@
 
 FROM linuxserver/wireguard:arm32v7-v1.0.20200827-ls37
 
-COPY insmod.sh /config/custom-cont-init.d/insmod
+COPY insmod.sh /etc/cont-init.d/20-insmod
 
-RUN chmod +x /config/custom-cont-init.d/insmod
+RUN chmod +x /etc/cont-init.d/20-insmod
