--- a/pihole/Dockerfile.rpi
+++ b/pihole/Dockerfile.rpi
@@ -20,6 +20,7 @@ COPY --from=build /usr/src/build/fbcp /usr/src/
 COPY services/ /etc/services.d/
 COPY init/ /etc/cont-init.d/
 
+# hadolint ignore=SC2016
 RUN sed -i '/$AUTHORIZED_HOSTNAMES = array(/ a "balena-devices.com",' /var/www/html/admin/scripts/pi-hole/php/auth.php
 
 # https://serverfault.com/a/817791
